docker setup for psotgresql

--- a/Postgresql-BackendDB/Dockerfile
+++ b/Postgresql-BackendDB/Dockerfile
@@ -3,10 +3,7 @@ FROM postgres:9.5
 # Copy custome initdb & scripts
 COPY docker-entrypoint-initdb.d /docker-entrypoint-initdb.d
 COPY scripts /scripts
-RUN chmod +x '/scripts/setenv.sh'
+RUN chmod -R +x '/scripts'
 
 # Install pljava
 RUN apt-get update && apt-get install -y postgresql-9.5-pljava
-
-
-
