Use pegasystem's postgres image

--- a/Postgresql-BackendDB/Dockerfile
+++ b/Postgresql-BackendDB/Dockerfile
@@ -1,4 +1,4 @@
-FROM postgres:9.5
+FROM pegasystems/postgres-pljava-openjdk:11
 
 # Copy custome initdb & scripts
 COPY docker-entrypoint-initdb.d /docker-entrypoint-initdb.d
@@ -6,4 +6,4 @@ COPY scripts /scripts
 RUN chmod -R +x '/scripts'
 
 # Install pljava
-RUN apt-get update && apt-get install -y postgresql-9.5-pljava
+#RUN apt-get update && apt-get install -y postgresql-9.5-pljava
