Multiple changes made to make the project compatable  for Pega 8.3 Changes to be committed: modified:   PegaPRPC-WebApp/Dockerfile  >> Optimize Dockerfile to have fewer commands, and generic commands to tolerate missing .war files modified:   PegaPRPC-WebApp/resources/context.xml.tmpl  >> Modified to work for Pega 8.3. Added rules & data schema modified:   Postgresql-BackendDB/docker-entrypoint-initdb.d/50-restoredata.sh  >> Modified to work for Pega 8.3. Search path modified to use pega 8.3 restore dump tables modified:   docker-compose.yml  >> Modified to have generic pega name instead of Pega721

--- a/PegaPRPC-WebApp/Dockerfile
+++ b/PegaPRPC-WebApp/Dockerfile
@@ -3,18 +3,11 @@ FROM busybox AS builder
 # Copy contents of resources folder in github project to /tmp/resources
 COPY resources /tmp/resources
 
-# Unzip .war contents to own folders
-RUN mkdir -p /opt/pega/prweb /opt/pega/prhelp /opt/pega/prsysmgmt
-RUN unzip -q -o /tmp/resources/prweb.war -d /opt/pega/prweb
-RUN unzip -q -o /tmp/resources/prhelp.war -d /opt/pega/prhelp
-RUN unzip -q -o /tmp/resources/prsysmgmt.war -d /opt/pega/prsysmgmt
-
-
 # Using base tomcat image provided by pega for enterprise deployments
 FROM pegasystems/pega-ready
 
-# Import prweb to tomcat webapps directory
-COPY --from=builder /opt/pega ${CATALINA_HOME}/webapps
+# Import prweb, prhelp, prsysmgmt to tomcat webapps directory
+COPY --from=builder /tmp/resources/*.war ${CATALINA_HOME}/webapps/
 # Replace enterprise level context.xml file with personal-edition specific context.xml file
 COPY --from=builder /tmp/resources/context.xml.tmpl ${CATALINA_HOME}/conf
 
